Устранение замечаний по ревью. Проверка поведения приложения на Git. В контейнерах падают тесты на проверку времени создания событий